force-app/main/default/objects/SObject_Mapping__c/fields/Include_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Include_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To send Account&apos;s Billing Address in Account sync request.</inlineHelpText>
    <label>Include Billing Address</label>
    <type>Checkbox</type>
</CustomField>