force-app/main/default/objects/SObject_Mapping__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True: to sync records of the object mentioned in SObject Name using Netsuite Connector App.
False: to stop sync records of the object mentioned in SObject Name using Netsuite Connector App.</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>