force-app/main/default/objects/SObject_Mapping__c/fields/Parent_Account_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Lookup_Field__c</fullName>
    <inlineHelpText>This field is mandatory if &apos;Sync Parent Account&apos; is checked.</inlineHelpText>
    <label>Parent Account Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>