force-app/main/default/objects/SObject_Mapping__c/fields/Parent_SObject_Map__c.field-meta.xml
<CustomField>
    <fullName>Parent_SObject_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Required for child Relationship Type.
Lookup to parent object.</inlineHelpText>
    <label>Parent SObject Map</label>
    <referenceTo>SObject_Mapping__c</referenceTo>
    <relationshipLabel>SObject Mapping</relationshipLabel>
    <relationshipName>SObject_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>