force-app/main/default/objects/SObject_Mapping__c/fields/Relationship_with_parent__c.field-meta.xml
<CustomField>
    <fullName>Relationship_with_parent__c</fullName>
    <inlineHelpText>Required for child Relationship Type. 
API name of the parent object relationship field (Lookup / Master-Details) on object mentioned in Parent SObject Mapping field. 
E.g. If SObject Name is OpportunityLineItem then OpportunityId or any other custom lookup or master detail field referencing Opportunity.</inlineHelpText>
    <label>Relationship with parent</label>
    <type>TextArea</type>
</CustomField>