force-app/main/default/objects/SObject_Mapping__c/fields/Sync_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Sync_Parent_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Parent Account</label>
    <type>Checkbox</type>
</CustomField>