force-app/main/default/objects/SObject_Mapping__c/validationRules/Parent_Account_Lookup_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_Account_Lookup_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Sync_Parent_Account__c, ISBLANK( Parent_Account_Lookup_Field__c) )</errorConditionFormula>
    <errorMessage>This field is mandatory to lookup Parent Account.</errorMessage>
</ValidationRule>